--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <meta property="fc:frame" content="vNext" />
-    <meta property="fc:frame:image" content="Google%20.png" />
-    <meta property="fc:og:image" content="Google%20.png" />
+    <meta property="fc:frame:image" content="https://frame-2.vercel.app/Google%20.png" />
+    <meta property="fc:og:image" content="https://frame-2.vercel.app/Google%20.png" />
     <meta name="fc:frame:post_url" content="https://frame.example.com/start" />
 <meta name="fc:frame:button:1" content="Deposit" />
 <meta name="fc:frame:button:1:action" content="post" />
